// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ValidatorRegistrationForm > should render form step 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="ValidatorRegistrationForm_form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex gap-3 items-center"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Register Validator
              </h1>
            </div>
            <div
              class="flex items-center text-sm leading-6 md:text-base md:leading-6 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Validator address on the network below.
            </div>
          </div>
        </div>
        <fieldset
          class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 -mx-3 mt-6 sm:mx-0 sm:mt-4"
        >
          <button
            class="relative w-full rounded focus:ring-2 focus:ring-theme-primary-400 focus:outline-hidden"
            data-testid="SelectAddress__wrapper"
            type="button"
          >
            <span
              class="flex absolute inset-y-0 left-4 items-center border border-transparent right-13"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-sm text-base font-semibold sm:text-base"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Mainsail Wallet …
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-sm text-base font-semibold sm:text-base no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </div>
            </span>
            <div
              class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
            >
              <div
                class="flex relative invisible flex-1 h-full"
              >
                <input
                  autocomplete="off"
                  class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
                  data-testid="SelectAddress__input"
                  name="senderAddress"
                  readonly=""
                  type="text"
                  value="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                />
              </div>
              <div
                class="flex items-center divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
                data-testid="Input__addon-end"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center p-1 space-x-3 bg-transparent rounded transition-colors text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white hover:bg-theme-primary-100 hover:text-theme-primary-700"
                  >
                    <div>
                      <div
                        style="height: 20px; width: 20px;"
                      >
                        <svg
                          id="user"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <circle
                              cx="10"
                              cy="5"
                              r="4"
                            />
                            <path
                              d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </button>
        </fieldset>
        <div
          class="mt-3 space-y-4 sm:mt-4"
        >
          <fieldset
            class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
          >
            <label
              class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex text-sm leading-[17px] font-semibold transition-colors duration-100"
              data-testid="FormLabel"
              for="validatorPublicKey"
            >
              Validator Public Key
            </label>
            <div
              class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  autocomplete="off"
                  class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
                  data-testid="Input__validator_public_key"
                  name="validatorPublicKey"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ValidatorRegistrationForm > should render review step 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__review-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex gap-3 items-center"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Transaction Review
              </h1>
            </div>
            <div
              class="flex items-center text-sm leading-6 md:text-base md:leading-6 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Review the transaction details below.
            </div>
          </div>
        </div>
        <div
          class="-mx-3 mt-6 space-y-3 sm:mx-0 sm:mt-4 sm:space-y-4"
        >
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="font-semibold leading-5 no-ligatures text-theme-secondary-700 min-w-24 text-md dark:text-theme-secondary-500"
                data-testid="DetailLabelText"
              >
                Addressing
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-col gap-3 mt-0 rounded-xl sm:mt-2 sm:border border-theme-secondary-300 dark:border-theme-dark-700"
            >
              <div
                class="p-3 w-full break-words sm:py-5 sm:px-6 sm:in-[.condensed]:py-4"
              >
                <div
                  class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
                >
                  <div
                    class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-36 dark:text-theme-secondary-500"
                  >
                    From
                  </div>
                  <div
                    class="flex overflow-hidden justify-end items-center space-x-2 w-full whitespace-nowrap sm:justify-start"
                  >
                    <span
                      class="text-sm text-base font-semibold sm:text-base sm:leading-5 text-theme-text leading-[17px]"
                      data-testid="Address__alias"
                    >
                      <span
                        class="transition-colors duration-200 no-ligatures"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                    <div
                      class="relative text-left sm:leading-5 grow leading-[17px]"
                    >
                      <span
                        class="overflow-hidden absolute w-3/4 w-full min-w-0 text-sm text-base font-semibold sm:text-base sm:leading-5 no-ligatures leading-[17px] text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="Address__address"
                      >
                        0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                      </span>
                      <span>
                         
                      </span>
                    </div>
                    <button
                      class="relative cursor-pointer ring-focus focus:outline-hidden"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="copy"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="font-semibold leading-5 no-ligatures text-theme-secondary-700 min-w-24 text-md dark:text-theme-secondary-500"
                data-testid="DetailLabelText"
              >
                Transaction Type
              </div>
            </div>
            <div
              class="overflow-hidden mt-0 rounded-xl sm:mt-2 sm:border border-theme-secondary-300 dark:border-theme-dark-700"
            >
              <div
                class="p-3 w-full break-words sm:py-5 sm:px-6 sm:in-[.condensed]:py-4"
              >
                <div
                  class="space-y-3 sm:space-y-0"
                >
                  <div
                    class="flex gap-4 justify-between items-center w-full sm:justify-start"
                  >
                    <div
                      class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-40 dark:text-theme-secondary-500"
                    >
                      Category
                    </div>
                    <div
                      class="flex items-center px-1 rounded dark:bg-transparent dark:border bg-theme-secondary-200 py-[3px] dark:border-theme-secondary-800"
                    >
                      <span
                        class="font-semibold text-theme-secondary-700 text-[12px] leading-[15px] dark:text-theme-secondary-500"
                      >
                        Registration
                      </span>
                    </div>
                  </div>
                  <div
                    class="hidden sm:block"
                  >
                    <div
                      class="flex clear-both my-4 w-full min-w-full h-px border-t border-dashed [background:none] border-theme-secondary-300 dark:border-theme-secondary-800"
                    />
                  </div>
                  <div
                    class="flex gap-4 justify-between items-center w-full sm:justify-start"
                  >
                    <div
                      class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-40 dark:text-theme-secondary-500"
                    >
                      Validator Public Key
                    </div>
                    <div
                      class="text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-900 truncate leading-[17px] dark:text-theme-secondary-200"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="p-3 mt-0 sm:p-0"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex text-sm leading-[17px] font-semibold transition-colors duration-100"
                  data-testid="FormLabel"
                  for="fee"
                >
                  Transaction Fee
                </label>
                <div
                  class="relative"
                  data-testid="InputFee"
                >
                  <div
                    class="absolute right-0 -mt-7"
                  >
                    <div
                      class="flex items-center"
                    >
                      <button
                        class="text-sm font-semibold select-none first:mr-2 last:ml-2 text-theme-secondary-700 dark:text-theme-secondary-200"
                        type="button"
                      >
                        Simple
                      </button>
                      <label
                        class="flex items-center h-3 cursor-pointer"
                      >
                        <input
                          class="sr-only toggle-input"
                          type="checkbox"
                        />
                        <div
                          class="inline-flex relative w-6 rounded-full toggle-handle bg-theme-primary-100 h-[5px] dark:bg-theme-secondary-800"
                        >
                          <span
                            class="absolute top-1/2 w-3 h-3 rounded-full transition-all duration-200 ease-in-out -translate-y-1/2 bg-theme-primary-600 handle-inner"
                          />
                        </div>
                      </label>
                      <button
                        class="text-sm font-semibold select-none first:mr-2 last:ml-2 text-theme-secondary-500 dark:text-theme-secondary-700"
                        type="button"
                      >
                        Advanced
                      </button>
                    </div>
                  </div>
                  <div
                    class="inline-flex flex-col items-center space-y-2 w-full sm:flex-row sm:space-y-0 sm:space-x-2"
                    data-testid="ButtonGroup"
                    role="radiogroup"
                  >
                    <button
                      aria-checked="false"
                      aria-label="0"
                      class="flex justify-center items-center p-0 w-full h-full font-semibold rounded border-2 transition-colors duration-300 cursor-pointer focus:ring-2 disabled:border disabled:cursor-not-allowed border-theme-primary-100 text-theme-secondary-700 aria-checked:border-theme-primary-600 aria-checked:bg-theme-primary-50 aria-checked:text-theme-primary-700 group dark:text-theme-secondary-500 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 dark:disabled:border-theme-secondary-700 dark:disabled:text-theme-secondary-700 dark:aria-checked:text-theme-dark-50 dark:aria-checked:cursor-default dark:border-theme-dark-700 dark:group-hover:bg-theme-dark-700 dark:aria-checked:border-theme-dark-400 dark:aria-checked:bg-theme-dark-800 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:ring-theme-primary-400 focus:outline-hidden disabled:border-theme-secondary-300 disabled:text-theme-secondary-500"
                      data-testid="ButtonGroupOption"
                      role="radio"
                      type="button"
                    >
                      <div
                        class="flex flex-col w-full transition-all text-theme-secondary-700 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50"
                      >
                        <div
                          class="flex justify-between items-center p-3 sm:flex-col sm:justify-start sm:items-start sm:space-y-2"
                        >
                          <div
                            class="text-sm sm:leading-5 leading-[17px]"
                          >
                            Slow
                          </div>
                          <div
                            class="flex justify-between sm:w-full"
                          >
                            <span
                              class="hidden text-xs whitespace-nowrap transition-all sm:block leading-[15px] sm:text-theme-secondary-500 sm:dark:text-theme-dark-500 dark:group-hover:text-theme-dark-200"
                              data-testid="Amount"
                            >
                              0 ARK
                            </span>
                          </div>
                        </div>
                        <div
                          class="flex justify-between py-2 px-3 w-full text-xs font-semibold transition-all text-theme-secondary-700 leading-[15px] bg-theme-navy-50 dark:text-theme-dark-200 dark:bg-theme-dark-800 dark:group-hover:bg-theme-dark-600 dark:group-hover:text-theme-dark-50"
                        >
                          <span>
                            Confirmation Time
                          </span>
                          <span>
                            ~10s
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-checked="true"
                      aria-label="0"
                      class="flex justify-center items-center p-0 w-full h-full font-semibold rounded border-2 transition-colors duration-300 cursor-pointer focus:ring-2 disabled:border disabled:cursor-not-allowed border-theme-primary-100 text-theme-secondary-700 aria-checked:border-theme-primary-600 aria-checked:bg-theme-primary-50 aria-checked:text-theme-primary-700 group dark:text-theme-secondary-500 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 dark:disabled:border-theme-secondary-700 dark:disabled:text-theme-secondary-700 dark:aria-checked:text-theme-dark-50 dark:aria-checked:cursor-default dark:border-theme-dark-700 dark:group-hover:bg-theme-dark-700 dark:aria-checked:border-theme-dark-400 dark:aria-checked:bg-theme-dark-800 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:ring-theme-primary-400 focus:outline-hidden disabled:border-theme-secondary-300 disabled:text-theme-secondary-500"
                      data-testid="ButtonGroupOption"
                      role="radio"
                      type="button"
                    >
                      <div
                        class="flex flex-col w-full transition-all text-theme-secondary-700 dark:text-theme-dark-200"
                      >
                        <div
                          class="flex justify-between items-center p-3 sm:flex-col sm:justify-start sm:items-start sm:space-y-2"
                        >
                          <div
                            class="text-sm sm:leading-5 leading-[17px] text-theme-navy-700 dark:text-theme-dark-50"
                          >
                            Average
                          </div>
                          <div
                            class="flex justify-between sm:w-full"
                          >
                            <span
                              class="hidden text-xs whitespace-nowrap transition-all sm:block leading-[15px] sm:text-theme-secondary-500"
                              data-testid="Amount"
                            >
                              0 ARK
                            </span>
                          </div>
                        </div>
                        <div
                          class="flex justify-between py-2 px-3 w-full text-xs font-semibold transition-all text-theme-secondary-700 leading-[15px] bg-theme-navy-100 dark:text-theme-dark-200 dark:bg-theme-dark-500"
                        >
                          <span>
                            Confirmation Time
                          </span>
                          <span>
                            ~5s
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-checked="false"
                      aria-label="0"
                      class="flex justify-center items-center p-0 w-full h-full font-semibold rounded border-2 transition-colors duration-300 cursor-pointer focus:ring-2 disabled:border disabled:cursor-not-allowed border-theme-primary-100 text-theme-secondary-700 aria-checked:border-theme-primary-600 aria-checked:bg-theme-primary-50 aria-checked:text-theme-primary-700 group dark:text-theme-secondary-500 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 dark:disabled:border-theme-secondary-700 dark:disabled:text-theme-secondary-700 dark:aria-checked:text-theme-dark-50 dark:aria-checked:cursor-default dark:border-theme-dark-700 dark:group-hover:bg-theme-dark-700 dark:aria-checked:border-theme-dark-400 dark:aria-checked:bg-theme-dark-800 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:ring-theme-primary-400 focus:outline-hidden disabled:border-theme-secondary-300 disabled:text-theme-secondary-500"
                      data-testid="ButtonGroupOption"
                      role="radio"
                      type="button"
                    >
                      <div
                        class="flex flex-col w-full transition-all text-theme-secondary-700 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50"
                      >
                        <div
                          class="flex justify-between items-center p-3 sm:flex-col sm:justify-start sm:items-start sm:space-y-2"
                        >
                          <div
                            class="text-sm sm:leading-5 leading-[17px]"
                          >
                            Fast
                          </div>
                          <div
                            class="flex justify-between sm:w-full"
                          >
                            <span
                              class="hidden text-xs whitespace-nowrap transition-all sm:block leading-[15px] sm:text-theme-secondary-500 sm:dark:text-theme-dark-500 dark:group-hover:text-theme-dark-200"
                              data-testid="Amount"
                            >
                              0 ARK
                            </span>
                          </div>
                        </div>
                        <div
                          class="flex justify-between py-2 px-3 w-full text-xs font-semibold transition-all text-theme-secondary-700 leading-[15px] bg-theme-navy-50 dark:text-theme-dark-200 dark:bg-theme-dark-800 dark:group-hover:bg-theme-dark-600 dark:group-hover:text-theme-dark-50"
                        >
                          <span>
                            Confirmation Time
                          </span>
                          <span>
                            ~2s
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
